some funal fixes, readme left
